--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage":"https://philipp-moriss.github.io/jwt-client-part",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,6 +13,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "normalize.css": "^8.0.1",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
